--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,7 +55,9 @@
                 @if (!User.Identity?.IsAuthenticated ?? false)
                 {
                     <li class="css-item"><a class="css-link" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li class="css-item"><a class="css-link" asp-controller="Home" asp-action="About">About</a></li>
+                    <li class="css-item"><a class="css-link" asp-controller="About" asp-action="Index">About</a></li>
+                    
+
                     <li class="css-item"><a class="css-link" asp-controller="Committee" asp-action="Index">Committee</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Blood" asp-action="Index">Blood</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Events" asp-action="Index">Events</a></li>
@@ -69,6 +71,7 @@
                 @if (User.Identity?.IsAuthenticated ?? false && !User.IsInRole("Admin"))
                 {
                     <li class="css-item"><a class="css-link" asp-controller="Home" asp-action="Index">Home</a></li>
+                    <li class="css-item"><a class="css-link" asp-controller="About" asp-action="Index">About</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Gallery" asp-action="Index">Gallery</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Help" asp-action="Request">Help</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Events" asp-action="Index">Events</a></li>
@@ -77,11 +80,17 @@
                 }
 
                 <!-- ADMIN MENU -->
-                @if (User.IsInRole("Admin"))
+                @if (User.IsInRole("Admin") && User.IsInRole("User"))
                 {
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Dashboard">Dashboard</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Gallery" asp-action="Index">Gallery</a></li>
-                    <li class="css-item"><a class="css-link" asp-controller="About-Management" asp-action="Index">About-Management</a></li>
+                    <li class="css-item"><a class="css-link" asp-controller="About" asp-action="Index">About</a></li>
+                    <li class="css-item">
+                        <a class="css-link" asp-controller="AboutManagement" asp-action="Index">
+                            About Management
+                        </a>
+                    </li>
+
                     <li class="css-item"><a class="css-link" asp-controller="Blood" asp-action="Index">Blood</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Members">Members</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Welfare">Welfare</a></li>
