--- a/Views/OurStories/Delete.cshtml
+++ b/Views/OurStories/Delete.cshtml
@@ -109,7 +109,7 @@
 
         <!-- Event Year from EventDate -->
         <span class="year-badge">
-            <i class="bi bi-calendar2-week-fill"></i> @Model.EventDate.ToString("yyyy")
+            <i class="bi bi-calendar2-week-fill"></i> @Model.EventDate.ToString("dd MMMM, yyyy")
         </span>
 
         <!-- Description -->
