--- a/Views/OurStories/Index.cshtml
+++ b/Views/OurStories/Index.cshtml
@@ -128,7 +128,8 @@
 
                     <!-- YEAR FROM EventDate -->
                     <span class="year-badge">
-                        <i class="bi bi-calendar2-week-fill"></i> @item.EventDate.ToString("yyyy")
+                        <i class="bi bi-calendar2-week-fill"></i> @item.EventDate.ToString("dd MMMM, yyyy")
+
                     </span>
 
                     <!-- DESCRIPTION -->
