--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -91,6 +91,9 @@
                         </a>
                     </li>
 
+                    <li class="css-item"><a class="css-link" asp-controller="Notice" asp-action="Index">Notice</a></li>
+                    <li class="css-item"><a class="css-link" asp-controller="NoticeManagement" asp-action="Index">Notice Management</a></li>
+
                     <li class="css-item"><a class="css-link" asp-controller="Blood" asp-action="Index">Blood</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Members">Members</a></li>
                     <li class="css-item"><a class="css-link" asp-controller="Admin" asp-action="Welfare">Welfare</a></li>
